# platform-fru-detect

./: .clang-tidy  meson.build  meson_options.txt
scripts/: reset-inventory
src/: dbus.cpp  dbus.hpp  descriptor.cpp  descriptor.hpp  environment.cpp  environment.hpp  i2c.cpp  i2c.hpp  inventory.cpp  inventory.hpp  log.hpp  meson.build  notify.cpp  notify.hpp  platform-fru-detect.cpp  platform.cpp  platform.hpp
src/dbus/: inventory.cpp  inventory.hpp  meson.build
src/devices/: meson.build  nvme.cpp  nvme.hpp
src/inventory/: inventory-manager.cpp  meson.build  migrations.hpp  publish-when-present.cpp
src/inventory/migrations/: meson.build  nvme-i2c-endpoint-from-slot-to-drive.cpp  nvme-ipzvpd-from-slot-to-drive.cpp
src/sysfs/: devicetree.cpp  devicetree.hpp  eeprom.cpp  eeprom.hpp  gpio.hpp  i2c.hpp  meson.build  sysfs.hpp
src/sysfs/i2c/: bus.cpp  device.cpp  meson.build  mux.cpp
src/tests/: meson.build  mock-inventory.cpp  mock-inventory.hpp  test-inventory-migrations.cpp  test-inventory.cpp  test-lights-out.cpp  test-nvme.cpp  test-platform.cpp
systemd/: meson.build
systemd/system/: meson.build  platform-fru-detect.service
